# renameone

./: README.md  index.html  package-lock.json  package.json  start.bat
docs/: 设计文档.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: exif.rs  inference.rs  lib.rs  log_ops.rs  renamer.rs  scanner.rs  thumbnail.rs  video.rs
